// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParentList renders a populated parent list correctly (full mode) 1`] = `
<DocumentFragment>
  <table
    border="1"
  >
    <tbody>
      <tr>
        <td>
          <button>
            Delete parent foo:122
          </button>
        </td>
        <td>
          foo:122
        </td>
        <td>
          Parent
        </td>
        <td>
          Great-grandparent/Grandparent
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ParentList renders a populated parent list correctly (shallow mode) 1`] = `
<DocumentFragment>
  <table
    border="1"
  >
    <tbody>
      <tr>
        <td>
          <button>
            Delete parent foo:122
          </button>
        </td>
        <td>
          foo:122
        </td>
        <td>
          Parent
        </td>
        <td>
          <button>
            Show More
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ParentList renders an empty list correctly 1`] = `
<DocumentFragment>
  <table
    border="1"
  >
    <tbody>
      <tr>
        <td>
          No parents defined.
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
